2001-08-10  Loren J. Rittle  <ljrittle@acm.org>

	* testsuite/testsuite_hooks.h (__set_testsuite_memlimit): Add
	dummy default argument to the non-limit implementation.

2001-08-10   Gunter Winkler gunter.winkler@mathematik.tu-chemnitz.de

	* include/bits/std_complex.h (complex<long double>::operator*=,
 	complex<long double>::operator/=): Fix thinko.

2001-08-10  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>

	* include/bits/std_limits.h: New file.
	* include/Makefile.am (bits_headers): Add std_limits.h
	(all-local): std_limits.h is no longer built.
	(${target_builddir}/std_limits.h): Remove.
	* include/Makefile.in: Regenerate.
	* src/limits.cc: New file.
	* src/Makefile.am (sources): Add limits.cc in replacement of
	limitsMEMBERS.cc.
	* src/Makefile.in: Regenerate.


2001-08-09  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>

	* src/gen-num-limits.cc (digits10): Fix thinko.

2001-08-09  Benjamin Kosnik  <bkoz@redhat.com>

	* po/Makefile.am (check-no): Add.
	(check-yes): Same.
	* po/Makefile.in: Regenerate.
	
2001-08-09  Benjamin Kosnik  <bkoz@redhat.com>

	* acconfig.h (_GLIBCPP_MEM_LIMITS): Define.
	* config.h.in: Regenerate.
	* acinclude.m4 (GLIBCPP_CHECK_SETRLIMIT): Check for setrlimit
	function.
	* aclocal.m4: Regenerate.
	* configure.in: Remove duplicate AM_CONFIG_HEADER.
	(AM_CONFIG_HEADER): Remove testsuite/testsuite_hooks.h.
	Only call GLIBCPP_CHECK_SETRLIMIT for native compiles.
	* configure: Regenerate.
	* testsuite_hooks.h.in: Move to...
	* testsuite_hooks.h: Here, include c++config.h. Use it.
	
	* Makefile.am (SUBDIRS): Move testsuite to last directory.
	* Makefile.in: Regenerate.
	* po/Makefile.am (stamp-po): Add.

2001-08-09  David Edelsohn  <edelsohn@gnu.org>

	* config/os/aix/bits/os_defines.h: Define std_limits.h macros.
	* config/os/generic/bits/os_defines.h: Likewise.
	* config/os/gnu-linux/bits/os_defines.h: Likewise.
	* config/os/hpux/bits/os_defines.h: Likewise.
	* config/os/irix/irix6.5/bits/os_defines.h: Likewise.