@@ -21,7 +21,7 @@
 ## Software Foundation, 59 Temple Place - Suite 330, Boston, MA 02111-1307,
 ## USA.
 
-## $Id: Makefile.am,v 1.2 2001/08/08 02:48:59 bkoz Exp $
+## $Id: Makefile.am,v 1.3 2001/08/10 15:47:21 gdr Exp $
 
 AUTOMAKE_OPTIONS = 1.3 gnits
 MAINT_CHARSET = latin1
@@ -391,7 +391,7 @@ stamp-${target_alias}:
 	fi
 	echo `date` > stamp-${target_alias}
 
-${target_builddir}/c++config.h: ${glibcpp_builddir}/config.h \
+${target_builddir}/c++config.h: ../config.h \
 				${glibcpp_srcdir}/include/bits/c++config \
 				${target_builddir}
 	@cat ${glibcpp_srcdir}/include/bits/c++config > $@ ;\
